--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.25.0
-opencv-python-headless==4.8.0.74
-numpy==1.24.3
-pandas==2.0.3
-tflite-runtime==2.12.0
+streamlit
+opencv-python
+numpy
+pandas
+tflite-runtime
